client side rendering

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "firebase": "^10.9.0",
     "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,7 +24,7 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8.4.38",
     "sass": "^1.72.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
